<resources>
    <string name="app_name">My_App</string>
    <string name="don_t_have_any_account">Don\'t Have Any Account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Signup">SignUp</string>
    <string name="login">login</string>
    <string name="create_account">Create Account</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="alredy_have_a_account">Alredy Have A Account?</string>
</resources>