<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_background"
        >

    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    />

        <ImageView
            android:id="@+id/main_layout_img_1"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginHorizontal="@dimen/_80sdp"
            android:layout_marginVertical="@dimen/_30sdp"
            android:contentDescription="@string/todo"
            android:src="@drawable/img" />

        <EditText
            android:id="@+id/main_email"
            android:drawableStart="@drawable/mail"
            style="@style/edit_text_main"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_border"
            android:layout_below="@id/main_layout_img_1"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:hint="@string/email"
            android:autofillHints="" />

    <EditText
            android:id="@+id/main_pass"
            android:drawableStart="@drawable/pass"
            android:background="@drawable/custom_border"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_email"
            style="@style/edit_text_main"
            android:hint="@string/password"
            android:importantForAutofill="no"
        />
    <Button
        android:id="@+id/main_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_pass"
        android:background="@drawable/custom_border"
        style="@style/button_40"
        android:text="@string/login"
        />
    <TextView
        android:id="@+id/main_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_login"
        android:text="@string/forgot_password"
        android:textColor="@color/l_color"
        android:textSize="@dimen/_13sdp"
        android:layout_marginStart="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_5sdp"
        />
        <Button
            android:id="@+id/main_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/button_23"
            android:background="@drawable/custom_border"
            android:text="@string/Signup"
            android:layout_below="@id/main_forgot"
            />
    <TextView
        android:id="@+id/text_mes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_signup"
        android:layout_marginVertical="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_110sdp"
        android:text="@string/don_t_have_any_account"
        android:textColor="@color/s_color"
        android:textSize="@dimen/_13sdp"
        android:layout_marginStart="@dimen/_35sdp"
        />
    </RelativeLayout>
</ScrollView>