<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_background"
        >

        <RelativeLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
       <TextView
           android:id="@+id/signup_txt"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/create_account"
           android:textSize="@dimen/_30sdp"
           android:textColor="@color/white"
           android:layout_marginTop="@dimen/_20sdp"
           android:layout_marginHorizontal="@dimen/_18sdp"
           />
          <EditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/signup_user"
              android:layout_below="@id/signup_txt"
              style="@style/edit_text_signup"
              android:background="@drawable/custom_border"
              android:layout_marginHorizontal="@dimen/_20sdp"
              android:hint="@string/full_name"
              android:drawableStart="@drawable/user"
              android:inputType="textPersonName"
              />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup_phone"
            style="@style/edit_text_signup"
            android:layout_below="@id/signup_user"
            android:background="@drawable/custom_border"
            android:hint="@string/phone"
            android:drawableStart="@drawable/phone"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:inputType="phone"
            />
        <EditText
            android:id="@+id/signup_email"
            android:drawableStart="@drawable/mail"
            style="@style/edit_text_signup"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_border"
            android:layout_below="@id/signup_phone"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:hint="@string/email"
            android:autofillHints="" />

        <EditText
            android:id="@+id/signup_pass"
            android:drawableStart="@drawable/cpass"
            android:background="@drawable/custom_border"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup_email"
            style="@style/edit_text_signup"
            android:hint="@string/password"
            android:importantForAutofill="no"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signup_cpass"
            style="@style/edit_text_signup"
            android:background="@drawable/custom_border"
            android:layout_below="@id/signup_pass"
            android:hint="@string/confirm_password"
            android:drawableStart="@drawable/cpass"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:inputType="textPassword"
            />
        <Button
            android:id="@+id/signup_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup_cpass"
            android:background="@drawable/custom_border"
            style="@style/button_35"
            android:text="@string/Signup"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup_register"
            android:background="@drawable/custom_border"
            style="@style/button_23"
            android:id="@+id/signup_log"
            android:text="@string/login"
/>
    </RelativeLayout>
</ScrollView>